<resources>
    <string name="app_name">ShoppingCartApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No data</string>
    <string name="label_sub_total">Sub total:</string>
    <string name="label_tax">Tax:</string>
    <string name="label_total">Total:</string>
    <string name="payment_type_cash">Cash</string>
    <string name="payment_type_card">Card</string>
    <string name="payment_type_paypal">PayPal</string>
    <string name="clear">Clear</string>
    <string name="checkout">Checkout</string>
    <string name="label_zero_dollar">0.0$</string>
    <string name="category">Category</string>
    <string name="product_name">Product name</string>
    <string name="number">Number</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="qty">qty</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="not_selected">Not selected</string>
</resources>
