<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:context="grabarski.shoppingcartapp.ui.checkout.CheckoutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="4dp"
        android:paddingRight="4dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_checkout_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:scrollbars="vertical"/>

        <TextView
            android:id="@+id/fragment_checkout_no_data_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/no_data"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:text="@string/label_sub_total"/>

            <TextView
                android:id="@+id/fragment_checkout_sub_total_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="end"
                android:paddingEnd="5dp"
                android:text="@string/label_zero_dollar"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:text="@string/label_tax"/>

            <TextView
                android:id="@+id/fragment_checkout_tax_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="end"
                android:paddingEnd="5dp"
                android:text="@string/label_zero_dollar"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:text="@string/label_total"/>

            <TextView
                android:id="@+id/fragment_checkout_total_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="end"
                android:paddingEnd="5dp"
                android:text="@string/label_zero_dollar"/>
        </LinearLayout>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/fragment_checkout_payment_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/fragment_checkout_button_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:checked="true"
            android:text="@string/payment_type_cash"
            android:textAllCaps="true"/>

        <RadioButton
            android:id="@+id/fragment_checkout_button_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:checked="false"
            android:text="@string/payment_type_card"
            android:textAllCaps="true"/>

        <RadioButton
            android:id="@+id/fragment_checkout_button_paypal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:checked="false"
            android:text="@string/payment_type_paypal"
            android:textAllCaps="true"/>

    </RadioGroup>

    <LinearLayout
        style="style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fragment_checkout_clear_cart_button"
            style="@style/BottomBarButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear"/>

        <View
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/fragment_checkout_checkout_cart_button"
            style="@style/BottomBarButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkout"/>
    </LinearLayout>
</LinearLayout>
